tests/snapshots/add__run add out.snap
---
source: tests/add.rs
info:
  program: add.out
  args: []
---
success: false
exit_code: 20
----- stdout -----

----- stderr -----
